--- a/index.html
+++ b/index.html
@@ -5,5 +5,12 @@
 </head>
 <body>
     <h1>Welcome to My Website</h1>
+    <form>
+        <label for='name'>Name:</label>
+        <input type='text' id='name' name='name'><br><br>
+        <label for='email'>Email:</label>
+        <input type='email' id='email' name='email'><br><br>
+        <input type='submit' value='Submit'>
+    </form>
 </body>
 </html>
